# weather-data-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
notebooks/: exploracao_dados.ipynb
src/datapipeline/: cli.py
src/datapipeline/core/: config.py  interfaces.py  pipeline.py
src/datapipeline/processing/: basic_transform.py
src/datapipeline/sources/: open_meteo.py
src/datapipeline/storage/: csv_sink.py  postgres_sink.py
