[tool.poetry]
name = "etl-pipeline-openmeteo"
version = "0.1.0"
description = "Pipeline ETL with Open-Meteo using Python, Docker and OOP"
authors = ["André <anlivoliveira@gmail.com>"]
license = "MIT"
readme = "README.md"


# linha importante para detecção de módulo
packages = [
    {include = "datapipeline", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = ">=2.3.3,<3.0.0"
requests = ">=2.32.5,<3.0.0"
typer = { version = ">=0.20.0,<0.21.0", extras = ["all"] }
pydantic = ">=2.12.4,<3.0.0"
rich = ">=14.2.0,<15.0.0"
click = ">=8.1,<8.2"
psycopg2-binary = "^2.9.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
ruff = "^0.14.5"
pytest = "^9.0.1"

